[project]
name = "hcalory-control"
version = "0.1.6"
dependencies = [
  "bleak>=1.0.0",
  "bleak-retry-connector<4.0",
  "py-datastruct<3.0.0",
]
description = "A tool for controlling Hcalory diesel heaters over Bluetooth."
authors = [{ name = "Evan Foster", email = "evan@fos.tech" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "hcalory",
  "bluetooth",
  "ble",
  "diesel",
  "heater"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Home Automation",
]

[project.urls]
Repository = "https://github.com/evanfoster/hcalory-control"

[project.scripts]
hcalory-control = "hcalory_control.heater:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.3",
]
